<resources>
    <string name="app_name">Mentalys</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="featured_title_1">Unlocking Better Sleep: How to Manage Anxiety and Reduce Stress for a Healthier Mind</string>
    <string name="featured_title_2">Cherries: A natural source of melatonin to aid rest.</string>
    <string name="featured_title_3">Avocado: Healthy fats to keep your mind sharp</string>
    <string name="featured_description_1">Struggling with sleepless nights? Learn practical techniques to calm anxiety, manage stress, and improve your sleep routine. Discover how small changes in your daily habits can lead to a more restful mind and body</string>
    <string name="featured_description_2">A natural source of melatonin to aid rest.</string>
    <string name="featured_description_3">Healthy fats to keep your mind sharp</string>
    <string name="lihat_semua">View all</string>
    <string name="greeting_user">"Hello %1$s"</string>
    <string name="alert_login">Please login to use this feature</string>
    <string name="good_morning">Good Morning</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="good_evening">Good Evening</string>
    <string name="good_night">Good Night</string>
    <string name="menu_konsultasi">Consult a Psychiatrist</string>
    <string name="menu_klinik_psikologi">Psychology \n Clinic</string>
    <string name="menu_cek_mental">Mental Health Check</string>
    <string name="menu_artikel_mental">Mental Health Articles</string>
    <string name="rekomendasi_klinik">Recommended Nearby Psychology Clinics</string>
    <string name="rekomendasi_psikiater">Consult a Specialist</string>
    <string name="rekomendasi_artikel">Mental Health Insights</string>
    <string name="jadwal">08:00 – 18:00</string>
    <string name="nama_dokter">Dr. Made Agus</string>
    <string name="biaya_konsultasi">Consultation Fee</string>
    <string name="harga">Rp 20,000.00</string>
    <string name="text_banner">Care for Your Mind, Care for Yourself\n– With Mentalys</string>
    <string name="mindfulness_tip_title">Mindfulness Tip</string>
    <string name="mindfulness_tip_description">Take 5 minutes today to focus on your breathing. Inhale deeply for 4 seconds, hold for 4 seconds, and exhale for 4 seconds.</string>
    <string name="positive_thinking_title">Positive Thinking</string>
    <string name="positive_thinking_description">Start your day by saying one positive thing about yourself. It can be a small achievement or a quality you admire.</string>
    <string name="stress_relief_title">Stress Relief</string>
    <string name="stress_relief_description">When feeling overwhelmed, take a break and step outside for fresh air. A few minutes in nature can help reset your mind.</string>
    <string name="gratitude_exercise_title">Gratitude Exercise</string>
    <string name="gratitude_exercise_description">Write down 3 things you\'re grateful for today. It can help shift your mindset to a more positive one.</string>
    <string name="physical_activity_tip_title">Physical Activity Tip</string>
    <string name="physical_activity_tip_description">Try a quick 10-minute stretch session. It helps release tension and boosts mood!</string>
    <string name="sleep_hygiene_title">Sleep Hygiene</string>
    <string name="sleep_hygiene_description">To improve sleep, avoid screens for at least 30 minutes before bed. Let your mind wind down.</string>
    <string name="pilih_test_mental">Please choose how you want to take the mental test</string>
    <string name="voice_check">Voice Tone Analysis</string>
    <string name="signature_check">Signature Analysis</string>
    <string name="quiz_check">Fill Out a Questionnaire</string>
    <string name="start_test">Start the Test</string>
    <string name="quiz_test_instruction">Please fill out the questionnaire below</string>
    <string name="question_1">Enter your age</string>
    <string name="hint_question_1">Your answer</string>
    <string name="question_2">Do you feel anxious?</string>
    <string name="question_3">Do you experience panic?</string>
    <string name="question_4">Do you breathe rapidly?</string>
    <string name="question_5">Do you sweat?</string>
    <string name="question_6">Do you have trouble concentrating?</string>
    <string name="question_7">Do you have trouble sleeping?</string>
    <string name="question_8">Do you have difficulty working?</string>
    <string name="question_9">Do you feel hopeless?</string>
    <string name="question_10">Do you often feel angry?</string>
    <string name="question_11">Do you tend to overreact?</string>
    <string name="question_12">Have you noticed changes in your eating habits?</string>
    <string name="question_13">Have you ever had thoughts of suicide?</string>
    <string name="question_14">Do you often feel tired?</string>
    <string name="question_15">Do you have close friends?</string>
    <string name="question_16">Are you addicted to social media?</string>
    <string name="question_17">Have you gained weight?</string>
    <string name="question_18">Are you an introvert?</string>
    <string name="question_19">Do you often recall stressful memories?</string>
    <string name="question_20">Do you frequently have nightmares?</string>
    <string name="question_21">Do you avoid certain people or activities?</string>
    <string name="question_22">Do you often feel negative?</string>
    <string name="question_23">Do you frequently blame yourself?</string>
    <string name="question_24">Do you experience hallucinations?</string>
    <string name="question_25">Do you have repetitive behaviors?</string>
    <string name="question_26">Do your symptoms appear seasonally?</string>
    <string name="question_27">Do you feel more energetic than usual?</string>
    <string name="answer_yes">Yes</string>
    <string name="answer_no">No</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="send">Send</string>
    <string name="title_voice_test">Voice Tone Analysis</string>
    <string name="voice_test_instruction">Please share your worries or talk about yourself</string>
    <string name="time_recoding">00:00</string>
    <string name="title_handwriting_test">Handwriting Analysis</string>
    <string name="handwriting_test_instruction">Write your worries or something about yourself on paper, then take a photo</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="analyse">Analyze</string>
    <string name="failed_open_camera">Failed open camera</string>
    <string name="failed_take_picture">Failed take picture</string>
    <string name="take_picture">Take picture</string>
    <string name="reverse_camera">Reverse camera\n</string>
    <string name="permision_request_granted">Permision request granted</string>
    <string name="permision_request_denied">Permision request denied</string>
    <string name="alert_empty_image">Image cannot empty!</string>
    <string name="mental_prediction_result">mental prediction result</string>
    <string name="mental_prediction_percentage_result">mental prediction percentage result</string>
    <string name="alert_empty_audio">Audio cannot empty!</string>
    <string name="test_result">Test Result</string>
    <string name="age_error_negative">Age cannot be negative\n</string>
    <string name="age_error_exceed">Age cannot exceed 150\n</string>
    <string name="radio_group_error">Please select an option</string>
    <string name="age_error_empty">Age cannot be empty</string>
    <string name="encouragement_anxiety">
        "Hey, fighter! \uD83C\uDF1F\n\nI know some days feel overwhelming, your mind races with thoughts, and anxiety creeps in uninvited. But remember this: you are so much stronger than you realize. Each small step you take is a victory, and your courage to keep going is truly inspiring. It&apos;s okay to ask for help and to talk about how you feel — your feelings are valid, and you deserve healing. You are loved, you are valued, and hope exists in every step of your journey. \uD83C\uDFBF\uD83D\uDCAA"
    </string>
    <string name="encouragement_MDD">
        "You are not your depression. \uD83C\uDF1F\n\nI know the weight feels heavy, and some days getting out of bed seems impossible. But remember, every small effort counts. Your resilience is incredible, and even on the hardest days, you are worthy of love and joy. Don’t be afraid to reach out for help — you are not alone in this fight. Healing is possible, and you are stronger than you know. \uD83C\uDFBF\uD83D\uDCAA"
    </string>
    <string name="encouragement_ASD">
        "Your mind sees the world in a unique way. \uD83C\uDF1F\n\nYour thoughts, perspectives, and talents are valuable. The world needs your authenticity and brilliance. It’s okay to embrace who you are, and know that support is out there for you. Keep being you, because you are amazing just as you are. \uD83C\uDFBF"
    </string>
    <string name="encouragement_Loneliness">
        "You are not alone. \uD83C\uDF1F\n\nLoneliness can feel isolating, but remember there are people who care about you and want to connect. Take small steps to reach out — a conversation, a smile, or even asking for help. You are worthy of love and connection. Your presence matters. \uD83C\uDFBF"
    </string>
    <string name="encouragement_bipolar">
        "You are more than your highs and lows. \uD83C\uDF1F\n\nBipolar disorder may bring extreme shifts, but your strength and resilience help you navigate these waves. Support is here, and balance is possible. Keep going, because your journey matters. You are not alone. \uD83C\uDFBF\uD83D\uDCAA"
    </string>
    <string name="encouragement_PTSD">
        "Your trauma does not define you. \uD83C\uDF1F\n\nHealing from PTSD takes time and courage, but each step forward is a victory. You are strong, and your past does not determine your future. Reach out for support — you deserve peace and healing. \uD83C\uDFBF"
    </string>
    <string name="skip">Skip</string>
    <string name="onboarding_main_2">Find</string>
    <string name="onboarding_main_3">Discover</string>
    <string name="onboarding_sub_2">Supports</string>
    <string name="onboarding_sub_3">Insights</string>
    <string name="onboarding_desc_2">Easily find trusted psychiatrists and mental health professionals. Your journey to better mental health starts with a single step.</string>
    <string name="onboarding_desc_3">Learn about mental health and lifestyle through curated content. Get tips and knowledge to support your journey toward a balanced life.</string>
    <string name="content_description_start_exploring_the_app">Start exploring the app</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="snaptoken">snaptoken</string>
    <string name="pay_with_snaptoken">pay with snaptoken</string>
    <string name="normal_flow_payment">normal flow payment</string>
    <string name="start_uikit_sdk">start uikit sdk</string>
    <string name="direct_payment_deeplink">direct payment / deeplink</string>
    <string name="credit_card">credit card</string>
    <string name="credit_card_payment">credit card payment</string>
    <string name="bca_va">bca va</string>
    <string name="mandiri_va_payment">mandiri va payment</string>
    <string name="permata_va_payment">permata va payment</string>
    <string name="bni_va_payment">bni va payment</string>
    <string name="atm_bersama_other_bank_payment">atm bersama /other bank payment</string>
    <string name="full_name">Full Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="location">Location</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="ok">OK</string>
</resources>