<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.payment.PaymentActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_snaptoken"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:hint="@string/snaptoken"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_snap_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pay_with_snaptoken" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/normal_flow_payment" />

    <Button
        android:id="@+id/button_uikit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_uikit_sdk" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/direct_payment_deeplink" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="start"
        android:text="@string/credit_card" />

    <Button
        android:id="@+id/button_direct_credit_card"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/credit_card_payment" />

    <Button
        android:id="@+id/button_direct_bca_va"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bca_va" />

    <Button
        android:id="@+id/button_direct_mandiri_va"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mandiri_va_payment" />

    <Button
        android:id="@+id/button_direct_permata_va"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/permata_va_payment" />

    <Button
        android:id="@+id/button_direct_bni_va"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bni_va_payment" />

    <Button
        android:id="@+id/button_direct_atm_bersama_va"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/atm_bersama_other_bank_payment" />

</LinearLayout>