<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rounded_top_leftright_24dp"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp">

    <View
        android:layout_width="56dp"
        android:layout_height="4dp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_article_content_chip" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_light_stroke_radius_16dp"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_light_stroke_radius_16dp"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_light_stroke_radius_16dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_light_stroke_radius_16dp"
        android:clickable="true"
        android:focusable="true"
        android:hint="@string/date_of_birth"
        android:inputType="none"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/rg_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/rb_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />

    </RadioGroup>

    <EditText
        android:id="@+id/et_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_light_stroke_radius_16dp"
        android:hint="@string/location"
        android:inputType="text"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/ok" />

</LinearLayout>
