<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".ui.onboarding.OnboardingFragment2">

    <TextView
        android:id="@+id/onboarding_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/onboarding_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/onboarding_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/onboarding_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/poppins_regular"
        android:includeFontPadding="false"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/skip"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/onboarding_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@id/onboarding_title"
        app:layout_constraintTop_toTopOf="@id/onboarding_title" />

    <ImageView
        android:id="@+id/onboarding_image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:contentDescription="@null"
        android:src="@drawable/img_onboarding2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".2" />

    <TextView
        android:id="@+id/onboarding_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:includeFontPadding="false"
        android:text="@string/onboarding_main_2"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/onboarding_image"
        app:layout_constraintTop_toBottomOf="@id/onboarding_image"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/onboarding_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semi_bold"
        android:includeFontPadding="false"
        android:text="@string/onboarding_sub_2"
        android:textColor="@color/white"
        android:textSize="56sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/onboarding_main"
        app:layout_constraintTop_toBottomOf="@id/onboarding_main"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/onboarding_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="96dp"
        android:includeFontPadding="false"
        android:maxLines="5"
        android:minLines="5"
        android:text="@string/onboarding_desc_2"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".1"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/onboarding_sub"
        app:layout_constraintTop_toBottomOf="@id/onboarding_sub"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent=".6" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:contentDescription="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_onboarding_tab_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/onboarding_desc"
        app:layout_constraintTop_toBottomOf="@id/onboarding_desc"
        app:layout_constraintVertical_bias=".4" />

</androidx.constraintlayout.widget.ConstraintLayout>
